--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@react-pdf/renderer": "^3.1.9",
     "bootstrap": "^5.2.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
